--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config config/webpack.config.js",
-    "start": "webpack --config config/webpack.prod.js && node index",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.js",
+    "start": "cross-env NODE_ENV=production webpack --config config/webpack.config.js && node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.2.0",
     "react": "^16.13.1",
